--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,15 @@
-FAUNA_ROOT_KEY = "secret"
-FAUNA_SCHEME = "http"
-FAUNA_DOMAIN = "192.168.86.235"
-FAUNA_PORT = "8443"
+fauna {
+  secret = "secret"
+  secret = ${?FAUNA_SECRET}
 
-akka {
-  loglevel = "INFO"
+  scheme = "http"
+  scheme = ${?FAUNA_SCHEME}
+
+  host = "localhost"
+  host = ${?FAUNA_HOST}
+
+  port = 8443
+  port = ${?FAUNA_PORT}
 }
+
+
