--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,17 +2,15 @@ fauna {
   secret = "secret"
   secret = ${?FAUNA_SECRET}
 
-  scheme = "http"
-  scheme = ${?FAUNA_SCHEME}
-
-  host = "localhost"
-  host = ${?FAUNA_HOST}
-
-  port = 8443
-  port = ${?FAUNA_PORT}
+  url = "https://db.fauna.com"
+  url = ${?FAUNA_URL}
 
   delete_db = true
   delete_db = ${?DELETE_DB}
+
+  db_name = "customer"
+  db_name = ${?DB_NAME}
+
 }
 
 
